<resources>

    <!--    General -->
    <string name="app_name">AndroidDeviceDetails</string>
    <string name="icon">Icon</string>
    <string name="no_usage_recorded">No usage recorded</string>

    <!--    Battery Section -->
    <string name="battery_no_usage">No usage recorded</string>
    <string name="battery_icon">Icon</string>
    <string name="battery_tile_info">Info</string>
    <string name="battery_drop">Dropped 2%</string>
    <string name="battery_DES">Battery Drop (largest first)</string>
    <string name="battery_ASC">Battery Drop (smallest first)</string>
    <string name="battery_PkgName_ALPH">Package Name (A to Z)</string>
    <string name="battery_PkgName_REV_APLH">Package Name (Z to A)</string>

    <!--    Date Time Picker -->
    <string name="picker_start">FROM</string>
    <string name="picker_11_00">11:00</string>
    <string name="picker_pm">pm</string>
    <string name="picker__21_jan_2020">21, Jan 2020</string>
    <string name="picker_end">TO</string>

    <!--    Sort BottomSheet -->
    <string name="sort_by">Sort By</string>
    <string name="sort_selected">Selected</string>
    <string name="sort_DES">Battery Drop (largest first)</string>

    <!--    Apply BottomSheet -->
    <string name="apply">Apply</string>

    <!--    App Event Section -->
    <string name="delete_icon">delete Icon</string>
    <string name="filterAll">All</string>
    <string name="filterEnrolled">Enrolled</string>
    <string name="filterInstalled">Installed</string>
    <string name="filterUpdated">Updated</string>
    <string name="filterUninstalled">Uninstalled</string>
    <string name="enroll"> Enroll :</string>
    <string name="install">Install :</string>
    <string name="update">Update :</string>
    <string name="uninstall_count">Uninstall :</string>
    <string name="colon"> :</string>

    <!--    App Type Section -->
    <string name="appTypeUser">User</string>
    <string name="appTypeAll">All</string>
    <string name="appTypeSystem">System</string>

    <!-- Main Activity Section -->
    <string name="location_data">Location Data</string>
    <string name="signal_data">Signal Data</string>
    <string name="batteryPercentage">0</string>
    <string name="percentage">%</string>
    <string name="used">Used</string>
    <string name="visited">Visited</string>
    <string name="location">Locations</string>
    <string name="network_usage">Network Usage</string>
    <string name="battery_usage">Battery Usage</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">longitude</string>
    <string name="get_location">Get Location</string>
    <string name="count_location">Count Location</string>
    <string name="service">Service</string>
    <string name="app_info">App info</string>
    <string name="info">Info</string>
    <string name="right">Right</string>
    <string name="left">Left</string>

    <!-- Network Usage Section-->
    <string name="wifi_data_usage">550 MB</string>
    <string name="cellular_data_usage">10 MB</string>
    <string name="wifi">Wifi</string>
    <string name="device_usage">Device Usage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="linkspeed"> MHz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>
    <string name="level">Level</string>
    <string name="default_font" translatable="false">sans-serif</string>
    <string name="strength">Strength</string>
    <string name="type">Type:</string>
    <string name="no_records_found">No records found</string>
    <string name="default_text">DEFAULT TEXT</string>
    <string name="cellular">Cellular</string>
    <string name="time">Sl No</string>
    <string name="count">Count :</string>
    <string name="tillToday">Till Today</string>
    <string name="no_data">No Data</string>
    <string name="sort_direction_arrow">sort direction arrow</string>
    <string name="sort">Sort</string>
    <string name="zero">0</string>
    <string name="geohash">GeoHash</string>
    <string name="address">Address</string>
    <string name="location_icon">location icon</string>
    <string name="min">Min</string>
    <string name="durationFormat">123 days, 23 hrs, 59 min</string>
    <string name="more_details">More Details</string>
    <string name="cellular_gauge">Cellular Gauge</string>
    <string name="wifi_gauge">Wifi Gauge</string>
    <string name="Toast_onNoData">No data on selected date</string>
    <string name="Unknown_location">Unknown Location</string>
    <string name="version_name">Version Name :</string>
</resources>