<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp">

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location_icon"
        android:padding="10dp"
        android:src="@drawable/location_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".6"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/countTimeLayout"
        app:layout_constraintStart_toEndOf="@id/locationIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/countTimeLayout"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/address"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha=".4"
                android:text="@string/count" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="2dp"
                android:text="@string/zero"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha=".8"
            android:text="@string/durationFormat"
            android:textSize="12sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>