<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="28dp"
            android:outlineSpotShadowColor="#393838"
            card_view:cardBackgroundColor="?attr/cardBackground"
            card_view:cardCornerRadius="20dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="0.088">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icon"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_two_tone_location_on_24"
                        card_view:tint="#83b899" />

                    <TextView
                        android:id="@+id/cardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/location_data"
                        android:textAlignment="viewEnd"
                        android:textColor="?attr/batteryTitle"
                        android:textSize="20sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:backgroundTint="#83b899"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias=".088"
                    android:contentDescription="@string/icon">

                </ImageView>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@id/linearLayout2"
                    card_view:layout_constraintVertical_bias=".5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/usingSingleValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/mainValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="4dp"
                            android:paddingStart="0dp"
                            android:text="@string/batteryPercentage"
                            android:textSize="70sp"
                            card_view:layout_constraintBottom_toBottomOf="parent"
                            card_view:layout_constraintEnd_toEndOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent"
                            card_view:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/superscript"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textSize="14sp"
                            card_view:layout_constraintBottom_toBottomOf="parent"
                            card_view:layout_constraintStart_toEndOf="@id/mainValue"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintVertical_bias="0.242" />

                        <TextView
                            android:id="@+id/subscript"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visited"
                            android:textSize="14sp"
                            card_view:layout_constraintBottom_toBottomOf="parent"
                            card_view:layout_constraintStart_toEndOf="@id/mainValue"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintVertical_bias="0.783" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
